# hkVido

./: README.md
linux64/: CMakeLists.txt  channel.cpp  channel.h  decode.cpp  dvr_control.cpp  dvr_control.h  face.cpp  face.h  guard.conf  hk_api.cpp  hk_api.h  http-server.cpp  jpg.cpp  jpg.h  kafka_store.cpp  kafka_store.h  login.cpp  login.h  main.cpp  play.cpp  play.h  play_task.cpp  play_task.h  sdk_api.h  sdk_common.h  sdk_init.cpp  store.cpp  store.h  store_factory.cpp  store_factory.h
linux64/lib/: camera.json  sdkTest
