set(base /home/panghao/kunlib)
 include_directories(${base}/user ${base}/user/config ${base}/include /home/panghao/kunlib/include/hiredis /home/panghao/kunlib/user/predis /home/panghao/netsdk/consoleDemo/include /usr/local/include/opencv /home/panghao/netsdk/incCn /usr/local/include)
add_definitions( -g -std=c++11 -D__STDC_CONSTANT_MACROS)
link_directories(${base}/libs /home/panghao/opencv-3.4.0/build/lib /usr/local/lib /home/panghao/netsdk/consoleDemo/linux64/lib/HCNetSDKCom /home/panghao/netsdk/consoleDemo/linux64/lib)
add_executable(vide kafka_producer.cpp kafka_store.cpp store_factory.cpp channel.cpp store.cpp main.cpp base64.cpp http-server.cpp play.cpp login.cpp dvr_control.cpp)
target_link_libraries(vide rdkafka kunconfig HCPreview SystemTransform hcnetsdk HCPlayBack hpr HCGeneralCfgMgr PlayCtrl  HCCore  avformat avdevice avcodec avfilter avutil swresample swscale  opencv_core -lopencv_imgcodecs opencv_imgproc hiredis event event_core glog jsoncpp crypto iconv z dl)
